--- a/appsettings.json
+++ b/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=RPA.db"
+    "DefaultConnection": "Data Source=BancoDados.db"
   },
   "Database": {
     "UseInMemory": false,
-    "MigrationsAssembly": "RPA"
+    "MigrationsAssembly": "BancoDados"
   }
 }
